# aws-s3-pyside

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  base.py  build.py  constants.py  formulas.py  package-lock.json  package.json  processor.py  pyproject.toml  pyside-crud.spec  requirements.txt  s3-bucket-browser.spec  utils.py
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation/: 01-PLAN.md
hooks/: runtime_hook.py
openspec/changes/add-file-drag-drop-upload/: tasks.md
openspec/changes/disable-dark-mode-windows/: tasks.md
openspec/changes/double-click-folder-navigation/: design.md  tasks.md
src/: __init__.py  config.py  main.py  main_window.py
src/config/: __init__.py  config_manager.py
src/models/: bucket_browser_model.py  bucket_object.py
src/mvp/: base_model.py  base_presenter.py  base_view.py  contracts.py
src/presenters/: bucket_browser_presenter.py  config_presenter.py
src/services/: s3_errors.py  s3_service.py
src/tests/: mock_view.py  test_bucket_browser_model.py  test_bucket_browser_presenter.py  test_config.py  test_data_loading.py  test_file_icons.py  test_s3_errors.py  test_s3_service.py
src/utils/: file_icons.py  styles.py
src/views/: bucket_browser_view.py  folder_first_sort_proxy_model.py  generate_link_dialog.py  image_preview_dialog.py  settings_panel_view.py  setup_wizard_view.py
(+124 files in other folders)
